--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "homebridge-thermostat-netatmo",
-  "version": "0.0.12",
-  "description": "homebridge plugin for netatmo thermostat",
+  "name": "homebridge-smoke-alarm-netatmo",
+  "version": "0.0.1",
+  "description": "homebridge plugin for netatmo smoke alarm",
   "license": "GPL-3.0",
   "keywords": [
     "homebridge-plugin"
@@ -10,10 +10,10 @@
     "node": ">=8",
     "homebridge": ">=0.2.5"
   },
-  "author": "Dan Poltawski",
+  "author": "Nick Rennie",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/danpoltawski/homebridge-thermostat-netatmo.git"
+    "url": "git+https://github.com/danpoltawski/homebridge-smoke-alarm-netatmo.git"
   },
   "dependencies": {
     "request": "^2.88.2",
